[tool.poetry]
name = "randunit"
version = "0.1.0"
description = "Random number generator"
authors = ["AvN Learn <avnlearn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
