[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "randunit"
authors = [{ name = "AvN Learn", email = "avnlearn@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.11"
dynamic = ["version", "description"]
dependencies = ["sympy"]

[project.urls]
Documentation = "https://flit.pypa.io"
Source = "https://github.com/pypa/flit"
